--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,28 @@
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
 body, html { height: 100%; }
+body { padding-top: 60px; padding-bottom: 40px; }
 
 .container-fluid { padding-left: 24px; }
 
-.dashboard-list { list-style: none; }
-
-.dashboard-list li {
-   padding: 4px;
-   margin: 5px;
-   float: left;
-   width: 200px;
-   height: 125px;
-   border: 1px solid black;
-}
+.brand-color { color: #f0f4f4; }
 
 #content {  overflow: auto; }
 #dashboard { list-style-type: none; margin: 0; padding: 0; white-space: nowrap; width: 100%; min-width: 1000px; }
 #dashboard li { margin: 3px 3px 3px 0; padding: 1px; display: inline-block; }
 
 #dashboard-settings{ position: fixed; top:200px; left:-296px; }
+
+.dashboard-container { border: 2px solid #999; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;  }
+.container-header { height: 23px; text-align: center; font-weight: bold; border-bottom: 2px solid #999; padding-top: 5px; }
+.container-body { padding: 10px; min-height:500px; }
+
+#backlog-header { background-color: #ac5150; }
+#current-header { background-color: #4985a6; }
+#features-header { background-color: #ec9749; }
+#ideas-header { background-color: #999; }
+#completed-header { background-color: #56844e; }
+button.close { border: 1px solid #444; margin-right: 5px; opacity: .4; line-height: 15px; padding: 0 3px 3px 3px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;}
+button.close:hover { border: 1px solid #222; opacity: .6; }
+.header-title { font-weight: bold; }
 
 #dashboard-settings #settings { width: 270px; border: 1px solid #666; border-left: 0; padding: 10px 10px 20px 15px;
 -webkit-border-top-right-radius: 5px;
@@ -54,9 +53,6 @@ background-color: #efefef;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
-
-#dashboard-settings a:hover { background-position: center right; }
-
 
 .rotate { writing-mode:tb-rl; filter: flipv fliph; -webkit-transform:rotate(270deg); -moz-transform:rotate(270deg); -o-transform: rotate(270deg); white-space:nowrap;
     width:20px;
